--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,9 @@ dependencies = [
     "fastapi>=0.121.2",
     "uvicorn>=0.38.0",
 ]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.0.0",
+    "httpx>=0.27.0",
+]
