--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,13 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.121.2",
     "passlib[bcrypt]>=1.7.4",
-    "bcrypt<4.0.0",  # Pin bcrypt to version compatible with passlib
+    "bcrypt<4.0.0", # Pin bcrypt to version compatible with passlib
     "python-dotenv>=1.2.1",
     "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.20",
     "uvicorn>=0.38.0",
+    "sqlmodel>=0.0.27",
+    "psycopg2-binary>=2.9.11",
 ]
 
 [project.optional-dependencies]
