--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "uvicorn>=0.38.0",
     "sqlmodel>=0.0.27",
     "psycopg2-binary>=2.9.11",
+    "pytest-cov>=7.0.0",
 ]
 
 [project.optional-dependencies]
