--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "sqlmodel>=0.0.27",
     "psycopg2-binary>=2.9.11",
     "pytest-cov>=7.0.0",
+    "pytest-asyncio>=1.3.0",
 ]
 
 [project.optional-dependencies]
