--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "psycopg2-binary>=2.9.11",
     "pytest-cov>=7.0.0",
     "pytest-asyncio>=1.3.0",
+    "httpx>=0.28.1",
 ]
 
 [project.optional-dependencies]
