--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,33 @@
-# Python-generated files
+# Python
 __pycache__/
-*.py[oc]
-build/
-dist/
-wheels/
-*.egg-info
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+.venv/
+ENV/
 
-# Virtual environments
-.venv
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
 
-# Environment variables
+# Database
+*.db
+*.db-shm
+*.db-wal
+
+# IDE
+.vscode/
+.idea/
+
+# Environment
 .env
 .env.local
-.env.*.local
-.pytest_cache
+
+# OS
+.DS_Store
+Thumbs.db
